<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/background_light"
    android:weightSum="1">

    <TextView
        android:text="  Starting From: Marina Bay Sands Hotel"
        android:id="@+id/startpoint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:textColor="#000000"
        android:layout_weight="0.22"
        android:gravity="left|center_vertical"/>

    <CheckBox android:id="@+id/checkbox_SingaporeFlyer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SingaporeFlyer"
        android:onClick="onCheckboxClicked"/>

    <CheckBox android:id="@+id/checkbox_VivoCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/VivoCity"
        android:onClick="onCheckboxClicked"/>

    <CheckBox android:id="@+id/checkbox_RWS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ResortWorldSentosa"
        android:onClick="onCheckboxClicked"/>

    <CheckBox android:id="@+id/checkbox_BuddhaToothRelic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BuddhaToothRelicTemple"
        android:onClick="onCheckboxClicked"/>

    <CheckBox android:id="@+id/checkbox_Zoo"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/Zoo"
    android:onClick="onCheckboxClicked"/>

    <CheckBox android:id="@+id/checkbox_MarinaBarrage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MarinaBarrage"
        android:onClick="onCheckboxClicked"/>

    <CheckBox android:id="@+id/checkbox_Esplanade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Esplanade"
        android:onClick="onCheckboxClicked"/>

    <CheckBox android:id="@+id/checkbox_TreeTopWalk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TreeTopWalk"
        android:onClick="onCheckboxClicked"/>

    <CheckBox android:id="@+id/checkbox_MaxwellFoodCentre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MaxwellFoodCentre"
        android:onClick="onCheckboxClicked"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:orientation="horizontal" >
    <TextView
        android:id="@+id/budgetholder"
        android:layout_width="183dp"
        android:layout_height="wrap_content"
        android:text="Budget: "
        android:textColor="#000000"
        android:textSize="16dp" />

    <EditText
        android:id="@+id/budget"
        android:layout_width="167dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="0.00"
        android:textAlignment="center"
        android:textSize="16dp" />
        </LinearLayout>


    <Button
        android:id="@+id/bruteforce"
        android:layout_height="wrap_content"
        android:layout_width = "match_parent"
        android:text="Brute Force"
        />
    <Button
        android:id="@+id/fastestimate"
        android:layout_height="wrap_content"
        android:layout_width = "match_parent"
        android:text="Fast Estimate"
        />

    <TextView
        android:text=""
        android:id="@+id/estimateprint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
